# ctrl-o

./: .gitignore  README.md  pyproject.toml  run_ctrlo_libero_nodes.py
configs/cluster/: mlcloud_cluster_test.yaml  mlcloud_cluster_test_local.yaml  mpi_cluster_test.yaml  wandb_logging.yaml
configs/dataset/: clevrtex_camo.yaml  clevrtex_full.yaml  clevrtex_outd.yaml  coco.yaml  coco_large.yaml  coco_normal.yaml  coco_small.yaml  entityseg.yaml  refcocog.yaml  sam.yaml  scannet.yaml  vg.yaml  vg_clip.yaml  vg_coco.yaml  vg_siglip.yaml  ycb.yaml
configs/evaluation/projects/bridging/: _preprocessing_coco.yaml  metrics_coco.yaml  outputs_coco_ccrop.yaml
configs/evaluation/projects/scaling/: _filter_coco_num_objects.yaml  _metrics_discovery_masks.yaml  _metrics_dual.yaml  _metrics_panoptic.yaml  _metrics_point.yaml  _metrics_segmentation.yaml  _metrics_slot_diagnosis.yaml  _preprocessing_clevrtex.yaml  _preprocessing_coco.yaml  _preprocessing_coco_panoptic.yaml  _preprocessing_to_ccrop_image.yaml  _preprocessing_to_ccrop_masks.yaml  metrics_clevrtex_camo.yaml  metrics_clevrtex_full.yaml  metrics_clevrtex_outd.yaml  metrics_coco_ccrop.yaml  metrics_coco_ccrop_518.yaml  metrics_coco_ccrop_dec518.yaml  metrics_coco_ccrop_oracle.yaml  metrics_coco_ccrop_panoptic.yaml  metrics_coco_ccrop_panoptic_oracle.yaml
configs/experiment/examples/: ema_updates.yaml
configs/experiment/projects/prompting/: _base_prompting_dinosaur.yaml  _base_reference_dinosaur.yaml  _metrics.yaml  _metrics_reference.yaml  _preprocessing_control.yaml  _preprocessing_control_ref.yaml
configs/experiment/projects/scaling/: _base_dinosaur.yaml  _metrics_coco.yaml  _metrics_coco_panoptic.yaml  _metrics_diagnosis.yaml  _metrics_dual.yaml  _metrics_lang.yaml  _metrics_point.yaml  _preprocessing_coco.yaml  _preprocessing_coco_control.yaml  coco_base16_dino.yaml  coco_base16_mae.yaml  coco_small14_ckpt.yaml  coco_small14_dinov2.yaml  coco_small14_dinov2_bneck.yaml  coco_small14_dinov2_opt_hps.yaml  (+11 more)
configs/settings/: dry.yaml  epochless.yaml  exploration_runs.yaml  log_feature_statistics.yaml  log_frequencies.yaml  output_path.yaml  profiler.yaml
containers/: container.def
ocl/: callbacks.py  combined_model.py  conditioning.py  datasets.py  decoder_conditioning.py  decoding.py  heads.py  losses.py  mapping.py  matching.py  nn_utils.py  optimization.py  perceptual_grouping.py  preprocessing.py  prompt_encoder.py  scheduling.py  transforms.py  typing.py  visualizations.py
ocl/cli/: _config.py  cli_utils.py  compute_dataset_size.py  eval.py  eval_utils.py  inference.py  mpi_cluster_train.py  train.py
ocl/feature_extractors/: _base_vision_local.py  _dinosiglip_vit_local.py  openvla_dinosiglip_local.py  openvla_vision.py  timm.py  utils.py
ocl/metrics/: __init__.py  acc.py  bbox.py  diagnosis.py  masks.py
ocl/models/: __init__.py
ocl/neural_networks/: __init__.py  convenience.py  extensions.py  modules.py  positional_embedding.py  transformer.py
ocl/utils/: checkpoint_filters.py  masking.py  resizing.py  routing.py  tensor_ops.py  toposort.py
scripts/: copy_dataset.sh  upload_hf.py
scripts/app/: additional_emb.py  additional_queries_emb.pkl  app.py  visualizations.py
scripts/datasets/: download_and_convert.sh  download_and_prepare_refcoco.sh  pyproject.toml
scripts/datasets/conversion_scripts/: convert_clevrtex.py  convert_coco.py  convert_coco_resize.py  convert_cocoref_resize.py  convert_entity_seg.py  convert_grit_resize.py  convert_scannet_or_ycb.py  get_text_embeddings.py  handlers.py  read_data.py  refer.py  tfds_extended_voc.py
scripts/datasets/data/: category_name_to_llama3_emb.pkl
scripts/datasets/download_scripts/: download_clevrtex_data.sh  download_coco_data.sh  download_entityseg.sh  download_grit_dataset.sh  download_refcoco.py  download_scannet_data.sh  download_ycb_data.sh  hf_download_entityseg.py
tests/: conftest.py  test_cli.py  test_conditioning.py  test_decoding.py  test_experiment_configs.py  test_feature_extractors.py  test_losses.py  test_matching.py  test_metrics.py  test_perceptual_groupings.py  test_routing.py  test_schedulers.py
tests/neural_networks/: test_convenience.py  test_extensions.py
(+158 files in other folders)
